# gosh-tracer

./: Cargo.toml  Makefile  README.md  package.json  tailwind.config.js
src/: blockchain.rs  decoder.rs  jinja.rs  main.rs  tracer.rs
templates/: index.j2  macro.j2
templates/static/: style.css
