[package]
name = "gosh-tracer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-recursion = "1.0.5"
clap = { version = "4.4.6", features = ["derive"] }
serde = "1.0.189"
serde_json = "1.0"
tera = "1.19.1"
tokio = { default-features = false, features = [ 'full' ], version = '1.21' }
ton_client = { git = 'https://github.com/tonlabs/ever-sdk.git', tag = '1.44.3' }
walkdir = "2.4.0"
